--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,13 @@ repositories {
 }
 
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
     testImplementation (
             "com.codeborne:selenide:5.19.0",
             "org.junit.jupiter:junit-jupiter-api:5.7.1")
